Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29248

QFileDialog::getSaveFileName does not shows the supplied file name in dialog

    XMLWordPrintable

Details

    • bfd73eaba3000861037d03787f87d1f4dafefea8 (23.1.2013)

    Description

      When third parameter in getSaveFileName() 'dir' includes a file name, the specified file is not selected (does not appear in the File Name field), Even though the file exists in the that directory.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              qtcomsupport Qt Support
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes