Don't use native dialog on windows for QFileDialog::getSaveFileName due to a bug in qt5 (https://bugreports.qt-project.org/browse/QTBUG-29248)

git-svn-id: svn://svn.code.sf.net/p/qtvlm/code/branches/qtVlm_dev@1647 2387b160-4621-4e8a-be36-40ea10d72da2