src/Dialogs/DialogVlmGrib.cpp
@@ -140,14 +140,15 @@ bool DialogVlmGrib::gribFileReceived(QByteArray * content)
         Settings::setSetting("edtGribFolder",gribPath);
     }
     filename=gribPath+"/"+filename;
-#ifdef __WIN_QTVLM
-    filename.replace("/","\\");
-#endif
     if(Settings::getSetting("askGribFolder",1)==1)
     {
-        qWarning()<<"filename="<<filename;
+#ifdef __WIN_QTVLM
+        filename = QFileDialog::getSaveFileName(this,
+                         tr("Sauvegarde du fichier GRIB"), filename, "Grib (*.grb)",0,QFileDialog::DontUseNativeDialog);
+#else
         filename = QFileDialog::getSaveFileName(this,
                          tr("Sauvegarde du fichier GRIB"), filename, "Grib (*.grb)");
+#endif
     }
 
     if (filename != "")
